--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
 version: '2'
 
 services:
+  redis:
+    image: redis
+    restart: always
+    volumes:
+        - $HOME/data/redis:/data
+    command:  redis-server --appendonly yes
   api:
     build: .
     ports:
       - "8876:8876"
     volumes:
       - ../pubpatterns:/var/lib/pubpatterns
+    links:
+      - redis
     restart: always
